<resources>
    <string name="app_name">Medicine Scheduler</string>
    <string name="recipe_description">Dexametrozona 3 cap 500 mg this is a good test to se whats going on</string>
    <string name="each">Each</string>
    <string name="during">During</string>
    <string name="program_intake_medicine">Program intake medicine</string>
    <string name="start_time_intake">Start hour</string>
    <string name="start_date_intake">Start date</string>
    <string name="btn_program">Program</string>
    <string name="medicine">Medicine/Supplement</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="time_picker_title">Select Alarm Time</string>
    <string name="date_picker_title">Select Alarm Date</string>
    <string name="not_empty_fields">Receipt can\'t have empty fields</string>
    <string name="each_hrs">hrs</string>
    <string name="during_days">days</string>
    <string name="eight_hrs">8</string>
    <string name="five_days">5</string>
    <string name="not_empty_fields_program">Program can\'t have empty fields</string>
    <string name="receipt_empty">Receipt can\'t be empty</string>
    <string name="btn_save">Save</string>
    <string name="receipt_validation_max_hrs">Only accepts the range from 1 to 24 hrs</string>
    <string name="receipt_validation_max_days">Only accepts the range from 1 to 365 days</string>
    <string name="program_save">All the alarms have been set successfully</string>
    <string name="current_receipt_log">Current Receipt</string>
    <string name="history_receipt_log">Receipt History</string>
    <string name="no_current_receipt">There is not current receipt data</string>
    <string name="alive_channel_id" translatable="false">alive_channel_id</string>
    <string name="alive_channel_name" translatable="false">alive_channel_name</string>
    <string name="notification_description" translatable="false">Notification when device is alive</string>
    <string name="extended_fab_content_desc">Create</string>
    <string name="extended_fab_label">Create</string>
    <string name="extended_fab_label_receipt">Receipt</string>
    <string name="extended_fab_label_program">Program</string>
    <string name="extended_fab_label_observe">Observe</string>
    <string name="title_reminder">Medicine Intake</string>
    <string name="notification_title">Medicine Intake</string>
    <string name="constraintDateTime">Date or/and time can not be in the past</string>
</resources>