<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardUseCompatPadding="true"
    app:layout_constraintRight_toLeftOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toStartOf="@+id/tv_each"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/et_description"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:lines="5"
                android:layout_marginStart="3dp"
                android:hint="@string/medicine"
                tools:text="Dexametrozona 3 capsulas 500 mg" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_each"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/each"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:layout_marginTop="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Cada" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_each_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/cv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_each">

            <EditText
                android:id="@+id/et_each_time"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:inputType="number"
                android:hint="@string/eight_hrs"
                tools:text="8" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            app:layout_constraintStart_toEndOf="@+id/cv_each_time"
            app:layout_constraintTop_toTopOf="@+id/cv_each_time"
            android:text="@string/each_hrs"
            tools:text="hrs" />

        <TextView
            android:id="@+id/tv_during"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/during"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toEndOf="@+id/cv_description"
            app:layout_constraintTop_toBottomOf="@+id/cv_each_time"
            tools:text="Durante" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_during_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/cv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_during">

            <EditText
                android:id="@+id/et_during_time"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center"
                android:hint="@string/five_days"
                tools:text="5" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/cv_during_time"
            app:layout_constraintStart_toEndOf="@+id/cv_during_time"
            android:text="@string/during_days"
            tools:text="days" />

        <TextView
            android:id="@+id/tv_receipt_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_num_medicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>